change main path

--- a/extras/docker/apache/Dockerfile
+++ b/extras/docker/apache/Dockerfile
@@ -50,12 +50,15 @@ EXPOSE 80
 
 
 # Install dependencies
+RUN npm config set strict-ssl false
+RUN yarn config set "strict-ssl" false -g
 RUN apt-get update \
   && apt-get install --no-install-recommends -y \
     apache2 \
     cron \
     git\
-    libapache2-mod-wsgi-py3
+    libapache2-mod-wsgi-py3 \
+    libjpeg-turbo8
  # && rm -rf /var/lib/apt/lists/*
 
 # Configure apache
@@ -75,7 +78,7 @@ RUN mv /home/wger/extras/docker/apache/venvwrapper /home/wger/venvwrapper
 RUN mv /home/wger/extras/docker/apache/entrypoint.sh /home/wger/entrypoint.sh
 
 RUN chmod 0644 /etc/cron.d/wger \
-  && chmod +x /home/wger/venvwrapper /home/wger/entrypoint.sh \
+  && chmod 777 /home/wger /home/wger/entrypoint.sh \
   && touch /var/log/cron.log
 
 COPY --from=builder /usr/src/app/wheels /wheels
@@ -84,8 +87,9 @@ COPY --chown=wger:www-data . /home/wger/src
 # Set up the application
 RUN ln -s /wger_arm/wger/static/CACHE /var/www
 
-RUN rm -rf /home/wger && git clone https://github.com/wger-project/wger.git /home/wger
+user wger
 WORKDIR /home/wger
+RUN rm -rf /home/wger && git clone https://github.com/wger-project/wger.git /home/wger
 RUN python3 -m venv /home/wger/venv
 RUN . /home/wger/venv/bin/activate \
     && pip install --upgrade pip \
@@ -94,21 +98,18 @@ RUN . /home/wger/venv/bin/activate \
     && python setup.py develop \
     && wger create-settings --database-path /home/wger/db/database.sqlite \
     && wger bootstrap
-#
-#
+
+
 # Change permissions of some files and folders so the apache process
 # can access them.
 RUN mkdir -p ~/static/CACHE ~/media \
-#    && ln -s /home/wger/static/CACHE /home/wger/src/CACHE \
-    && chmod g+w /home/wger
-#    #/static/CACHE \
-#   && sed -i "/^MEDIA_ROOT/c\MEDIA_ROOT='\/home\/wger\/media'" settings.py \
-#    && echo STATIC_ROOT=\'/home/wger/static\' >> settings.py
-
-USER rootma
-#RUN apt-get remove build-essential -y \
-#    && apt autoremove -y \
-#    && chown :www-data -R /home/wger/db \
-#    && chmod g+w /home/wger/db /home/wger/db/database.sqlite
-
-#ENTRYPOINT ["/home/wger/entrypoint.sh"]
+    && ln -s /home/wger/static/CACHE /home/wger/src/CACHE \
+    && chmod g+w /home/wger/static/CACHE \
+    && sed -i "/^MEDIA_ROOT/c\MEDIA_ROOT='\/home\/wger\/media'" settings.py \
+    && echo STATIC_ROOT=\'/home/wger/static\' >> settings.py
+USER root
+RUN apt-get remove build-essential -y \
+    && apt autoremove -y \
+    && chown :www-data -R /home/wger/db \
+    && chmod g+w /home/wger/db /home/wger/db/database.sqlite
+ENTRYPOINT ["/home/wger/entrypoint.sh"]
