--- a/extras/docker/apache/wger.conf
+++ b/extras/docker/apache/wger.conf
@@ -1,4 +1,4 @@
-<Directory /home/wger/src>
+<Directory /home/wger>
     <Files wsgi.py>
         Require all granted
     </Files>
@@ -6,9 +6,9 @@
 
 
 <VirtualHost *:80>
-    WSGIDaemonProcess wger python-path=/home/wger/src python-home=/home/wger/venv
+    WSGIDaemonProcess wger python-path=/home/wger python-home=/home/wger/venv
     WSGIProcessGroup wger
-    WSGIScriptAlias / /home/wger/src/wger/wsgi.py
+    WSGIScriptAlias / /home/wger/wger/wsgi.py
     WSGIPassAuthorization On
 
     Alias /static/ /home/wger/static/
